# mcp

./: .gitignore  Architecture Diagram.pptx  README.MD  param.txt  run commands.txt  start_mcp.bat
llm server/: __init__.py  main.py  pyproject.toml
mcp client/: client.py
mcp server/: __init__.py  email_handler.py  llm_handler.py  pyproject.toml  server.py
scikiq-mcp-server/: pyproject.toml
scikiq-mcp-server/src/scikiq_mcp_server/config/: config.py
scikiq-mcp-server/src/scikiq_mcp_server/servers/: mcp.py
scikiq-mcp-server/src/scikiq_mcp_server/tools/: tools.py
ssmp/: pyproject.toml  server.py
