[tool.poetry]
name = "mcp server"
version = "0.0.1"
description = "MCP Server to SCIKIQ DAMS"
authors = ["Harsh Raj <harshraj28@gmail.com>"]
license = "public"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
